--- a/Mascara-Maravillosa/.vscode/settings.json
+++ b/Mascara-Maravillosa/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    
+    "omnisharp.useModernNet": false,
+    "omnisharp.projectLoadTimeout":60,
+    
     "files.exclude": {
         "**/.DS_Store": true,
         "**/.git": true,
